Fix bottom and top row area overlaps globally

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -223,6 +223,12 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  padding-top: env(safe-area-inset-top, 0px);
+  padding-bottom: env(safe-area-inset-bottom, 0px);
+  box-sizing: border-box;
+}
+
 xmpp-app {
   display: block;
   height: 100%;
